# QK4

./: .gitignore  CMakeLists.txt  CONVENTIONS.md  PATTERNS.md  README.md  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: build-pi.sh
.github/workflows/: build-development.yml  build-flatpak.yml  build-macos.yml  build-raspberry-pi.yml  build-windows.yml  codeql.yml  comment-guard.yml  issue-triage.yml  lint.yml  qt611-canary.yml  release.yml  sanitizers.yml
docs/: K4STYLES_REFERENCE.md  UI_COMPONENTS.md  controllers.md  halikey-cw-trace.md  halikey-midi-windows-debounce-bug.md  k4-protocol-quirks.md  radiostate-catserver-api-contract.md
flatpak/: io.github.mikeg_dal.QK4.desktop  io.github.mikeg_dal.QK4.json  manifest.json
resources/: 99-kpod.rules  QK4.entitlements
src/: README.md  main.cpp  mainwindow.cpp  mainwindow.h
src/audio/: README.md  audioengine.cpp  audioengine.h  audiologging.h  opusdecoder.cpp  opusdecoder.h  opusencoder.cpp  opusencoder.h  sidetonegenerator.cpp  sidetonegenerator.h
src/controllers/: README.md  antennaconfigcontroller.cpp  antennaconfigcontroller.h  antennadisplaycontroller.cpp  antennadisplaycontroller.h  audiocontroller.cpp  audiocontroller.h  bandnavigationcontroller.cpp  bandnavigationcontroller.h  buttonrowdispatcher.cpp  buttonrowdispatcher.h  connectioncontroller.cpp  connectioncontroller.h  cwcontroller.cpp  cwcontroller.h  dxclustercontroller.cpp  dxclustercontroller.h  featuremenucontroller.cpp  featuremenucontroller.h  filterindicatorcontroller.cpp  filterindicatorcontroller.h  hardwarecontroller.cpp  hardwarecontroller.h  kpa1500uicontroller.cpp  kpa1500uicontroller.h  macrocontroller.cpp  macrocontroller.h  memorybuttonscontroller.cpp  memorybuttonscontroller.h  menucontroller.cpp  menucontroller.h  modelabelcontroller.cpp  modelabelcontroller.h  modepopupcontroller.cpp  modepopupcontroller.h  popupmanager.cpp  popupmanager.h  processingdisplaycontroller.cpp  processingdisplaycontroller.h  rightsidecontroller.cpp  (+21 more)
src/dsp/: README.md  minipan_rhi.cpp  minipan_rhi.h  panadapter_constants.h  panadapter_rhi.cpp  panadapter_rhi.h
src/hardware/: README.md  halikey_edge.h  halikeydevice.cpp  halikeydevice.h  halikeymidiworker.cpp  halikeymidiworker.h  halikeyv14worker.cpp  halikeyv14worker.h  halikeyworkerbase.h  iambickeyer.cpp  iambickeyer.h  kpoddevice.cpp  kpoddevice.h  kpodhidworker.cpp  kpodhidworker.h  kpodplusdevice.cpp  kpodplusdevice.h  kpodplususbworker.cpp  kpodplususbworker.h  kpodudevworker.cpp  kpodudevworker.h
src/models/: README.md  menumodel.cpp  menumodel.h  radiostate.cpp  radiostate.h
src/models/radiostate/: README.md  antennastate.cpp  antennastate.h  audioeffectsstate.cpp  audioeffectsstate.h  datacontrolstate.cpp  datacontrolstate.h  frequencyvfostate.cpp  frequencyvfostate.h  levelsstate.cpp  levelsstate.h  modefilterstate.cpp  modefilterstate.h  powerstate.cpp  powerstate.h  processingstate.cpp  processingstate.h  qskcontrolstate.cpp  qskcontrolstate.h  rxtxmeterstate.cpp  rxtxmeterstate.h  spectrumdisplaystate.cpp  spectrumdisplaystate.h  textdecodestate.cpp  textdecodestate.h  xvtrbandstate.cpp  xvtrbandstate.h
src/network/: README.md  catframes.cpp  catframes.h  catpushbroadcaster.cpp  catpushbroadcaster.h  catserver.cpp  catserver.h  dxclusterclient.cpp  dxclusterclient.h  kpa1500client.cpp  kpa1500client.h  networkmetrics.cpp  networkmetrics.h  protocol.cpp  protocol.h  tcpclient.cpp  tcpclient.h
src/settings/: README.md  radiosettings.cpp  radiosettings.h
src/ui/: README.md  audioinputpage.cpp  audioinputpage.h  audiooutputpage.h  bottommenubar.cpp  controlgroupwidget.h  cwkeyerpage.h  displaypopupwidget.h  dualcontrolbutton.h  dxclusterpage.cpp  dxclusterpage.h  dxspotoverlay.cpp  dxspotoverlay.h  featuremenubar.cpp  featuremenubar.h  filterindicatorwidget.cpp  filterindicatorwidget.h  fnpopupwidget.h  frequencydisplaywidget.h  k4styles.cpp  k4styles.h  keyingweightpopup.cpp  keyingweightpopup.h  kpa1500minipanel.cpp  kpa1500minipanel.h  kpa1500page.h  kpodpage.h  lineinpopup.cpp  lineinpopup.h  lineoutpopup.cpp  lineoutpopup.h  macrodialog.cpp  menuoverlay.h  micconfigpopup.cpp  micconfigpopup.h  micinputpopup.cpp  micinputpopup.h  mousevfoindicator.cpp  mousevfoindicator.h  nethealthwidget.cpp  (+18 more)
src/ui/dialogs/: README.md  macrodialog.cpp  macrodialog.h  optionsdialog.cpp  optionsdialog.h  radiomanagerdialog.cpp  radiomanagerdialog.h  textdecodewindow.cpp  textdecodewindow.h
src/ui/overlays/: README.md  baloverlay.cpp  baloverlay.h  dxspotoverlay.cpp  dxspotoverlay.h  menuoverlay.cpp  menuoverlay.h  monoverlay.cpp  monoverlay.h  mousevfoindicator.cpp  sidecontroloverlay.cpp  sidecontroloverlay.h
src/ui/pages/: README.md  aboutpage.cpp  aboutpage.h  audioinputpage.cpp  audioinputpage.h  audiooutputpage.cpp  audiooutputpage.h  cwkeyerpage.cpp  dxclusterpage.cpp  dxclusterpage.h  kpa1500page.cpp  kpodpage.cpp  kpodpage.h  rigcontrolpage.cpp  rigcontrolpage.h  stationpage.cpp  stationpage.h
src/ui/popups/: README.md  antennacfgpopup.cpp  antennacfgpopup.h  bandpopupwidget.cpp  bandpopupwidget.h  buttonrowpopup.cpp  buttonrowpopup.h  confirmpopup.cpp  confirmpopup.h  displaypopupwidget.cpp  displaypopupwidget.h  fnpopupwidget.cpp  fnpopupwidget.h  k4popupbase.cpp  k4popupbase.h  keyingweightpopup.cpp  keyingweightpopup.h  lineinpopup.cpp  lineinpopup.h  lineoutpopup.cpp  lineoutpopup.h  micconfigpopup.cpp  micconfigpopup.h  micinputpopup.cpp  micinputpopup.h  modepopupwidget.cpp  modepopupwidget.h  (+8 more)
src/utils/: README.md  bandplan.cpp  bandplan.h  macroids.h  radioutils.cpp  radioutils.h  wheelaccumulator.cpp
tests/: CMakeLists.txt  bench_radiostate.cpp  test_bandplan.cpp  test_catpushbroadcaster.cpp  test_catserver.cpp  test_dxcluster.cpp  test_halikeydevice.cpp  test_iambickeyer.cpp  test_kpodplususbworker.cpp  test_menumodel.cpp  test_networkmetrics.cpp  test_protocol.cpp  test_radiostate.cpp  test_radiostate_golden.cpp  test_radiostate_registry.cpp  test_radioutils.cpp
(+43 files in other folders)
